cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_search_command_case_2_quiet_1_true@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Artists:
	artist:01J1K5B6RJ84WJXCWYJ5WNE12E
