cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__library_command@stdout-Library { command: Analyze }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Library analysis started
