cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__library_command@stdout-Library { command: Brief }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Ok(
    LibraryBrief {
        artists: 1,
        albums: 1,
        songs: 1,
        playlists: 1,
        collections: 1,
    },
)
